зкщоусе Ñproject completed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,3 +13,7 @@
 @import "blocks/projects";
 @import "blocks/like";
 @import "blocks/links";
+@import "blocks/studio";
+@import "blocks/persons";
+@import "blocks/news";
+@import "blocks/footer";
